==> RenePlattnerCS/qpc-tetris-water-system/libraries/NRF24/NRF24.c <==
#include "NRF24_conf.h"
#include "NRF24.h"
#include "NRF24_reg_addresses.h"

void csn_high(void) {
    LL_GPIO_SetOutputPin(csn_gpio_port, csn_gpio_pin);
}

void csn_low(void) {
    LL_GPIO_ResetOutputPin(csn_gpio_port, csn_gpio_pin);
}

void ce_high(void) {
    LL_GPIO_SetOutputPin(ce_gpio_port, ce_gpio_pin);
}

void ce_low(void) {
    LL_GPIO_ResetOutputPin(ce_gpio_port, ce_gpio_pin);
}

void nrf24_w_reg(uint8_t reg, uint8_t *data, uint8_t size) {
    uint8_t cmd = W_REGISTER | reg;

    csn_low();
    LL_SPI_Transmit(SPIX, &cmd, 1);
    LL_SPI_Transmit(SPIX, data, size);
    csn_high();
}

uint8_t nrf24_r_reg(uint8_t reg, uint8_t size)
{
    uint8_t cmd = R_REGISTER | reg;
    uint8_t data = 0;

    csn_low();
    SPI_WriteByte(SPIX, cmd);  // send register address

    if (size == 1) {
        data = SPI_ReadByte(SPIX);
    } else {
        for (uint8_t i = 0; i < size; i++) {
            data = SPI_ReadByte(SPIX); // or fill buffer
        }
    }

    csn_high();
    return data;
}

void nrf24_w_spec_cmd(uint8_t cmd) {
    LL_SPI_Transmit(SPIX, &cmd, 1);
}

void nrf24_w_spec_reg(uint8_t *data, uint8_t size) {
    LL_SPI_Transmit(SPIX, data, size);
}

void nrf24_r_spec_reg(uint8_t *data, uint8_t size) {
    LL_SPI_Receive(SPIX, data, size);
}

uint8_t nrf24_r_status(void) {
    uint8_t data = 0;
    uint8_t cmd = NOP_CMD;

    csn_low();
    LL_SPI_TransmitReceive(SPIX, &cmd, &data, 1);
    csn_high();

    return data;
}

uint8_t nrf24_transmit(uint8_t *data, uint8_t size) {
    ce_low();

    uint8_t cmd = W_TX_PAYLOAD;

    csn_low();
    LL_SPI_Transmit(SPIX, &cmd, 1);
    LL_SPI_Transmit(SPIX, data, size);
    csn_high();

    ce_high();
    // Simple delay (replace HAL_Delay with your delay function)
    for (volatile uint32_t i = 0; i < 8000; i++);  // ~1ms at typical clock
    ce_low();

    if (nrf24_r_status() & (1 << MAX_RT)) {
        nrf24_clear_max_rt();
        nrf24_flush_tx();
        return 1;
    }

    return 0;
}

void nrf24_transmit_no_ack(uint8_t *data, uint8_t size) {
    ce_low();

    uint8_t cmd = W_TX_PAYLOAD_NOACK;

    csn_low();
    LL_SPI_Transmit(SPIX, &cmd, 1);
    LL_SPI_Transmit(SPIX, data, size);
    csn_high();

    ce_high();
    for (volatile uint32_t i = 0; i < 8000; i++);  // ~1ms delay
    ce_low();
}

void nrf24_transmit_rx_ack_pld(uint8_t pipe, uint8_t *data, uint8_t size) {
    if (pipe > 5) {
        pipe = 5;
    }

    uint8_t cmd = (W_ACK_PAYLOAD | pipe);

    csn_low();
    LL_SPI_Transmit(SPIX, &cmd, 1);
    LL_SPI_Transmit(SPIX, data, size);
    csn_high();
}

void nrf24_receive(uint8_t *data, uint8_t size) {
    uint8_t cmd = R_RX_PAYLOAD;

    csn_low();

    // Send command byte
    LL_SPI_TransmitData8(SPIX, cmd);
    while (!LL_SPI_IsActiveFlag_RXNE(SPIX));
    (void)LL_SPI_ReceiveData8(SPIX); // discard returned STATUS byte

    // Read payload bytes
    for (uint8_t i = 0; i < size; i++) {
        LL_SPI_TransmitData8(SPIX, 0xFF); // dummy clock
        while (!LL_SPI_IsActiveFlag_RXNE(SPIX));
        data[i] = LL_SPI_ReceiveData8(SPIX);
    }

    csn_high();

    nrf24_clear_rx_dr();
}

void nrf24_defaults(void){
	ce_low();

	nrf24_pwr_dwn();
	nrf24_tx_pwr(3);
	nrf24_data_rate(_1mbps);
	nrf24_set_channel(2);
	nrf24_set_crc(no_crc, _1byte);
	nrf24_set_addr_width(5);
	nrf24_flush_tx();
	nrf24_flush_rx();
	nrf24_clear_rx_dr();
	nrf24_clear_tx_ds();
	nrf24_clear_max_rt();
	nrf24_stop_listen();
	nrf24_dpl(disable);
	nrf24_en_ack_pld(disable);
	nrf24_en_dyn_ack(disable);
	nrf24_auto_retr_delay(0);
	nrf24_auto_retr_limit(3);


	for(uint8_t i = 0; i < 5; i++){
		nrf24_pipe_pld_size(i, 0);
		nrf24_cls_rx_pipe(i);
		nrf24_set_rx_dpl(i, disable);
		nrf24_auto_ack(i, enable);
	}

	ce_high();
}
