==> savob/titan_2026/firmware/titan_2026_rev_a/Drivers/stm32_hal_nrf24_library/NRF24.c <==
#include <stdio.h>
#include "stm32f1xx_hal.h"
#include "stm32f1xx_hal_gpio.h"
#include "stm32f1xx_hal_spi.h"
#include "stm32f1xx_hal_tim.h"
#include "NRF24_reg_addresses.h"
#include "NRF24.h"
#include <string.h>

void csn_high(struct NRFConfig radio){
	HAL_GPIO_WritePin(radio.csn_gpio_port, radio.csn_gpio_pin, 1);
}

void csn_low(struct NRFConfig radio){
	HAL_GPIO_WritePin(radio.csn_gpio_port, radio.csn_gpio_pin, 0);
}

void ce_high(struct NRFConfig radio){
	HAL_GPIO_WritePin(radio.ce_gpio_port, radio.ce_gpio_pin, 1);
}

void ce_low(struct NRFConfig radio){
	HAL_GPIO_WritePin(radio.ce_gpio_port, radio.ce_gpio_pin, 0);
}

void nrf24_w_reg(struct NRFConfig radio, uint8_t reg, uint8_t *data, uint8_t size){

	uint8_t cmd = W_REGISTER | reg;

	uint8_t temp_buffer[size+1];
	temp_buffer[0] = cmd;
	memcpy(&temp_buffer[1], data, size);

	csn_low(radio);
	HAL_SPI_Transmit(radio.hspiX, temp_buffer, size + 1, radio.spi_w_timeout);
	csn_high(radio);
}

uint8_t nrf24_r_reg(struct NRFConfig radio, uint8_t reg){
	uint8_t cmd = R_REGISTER | reg;

	uint8_t out_buffer[2];
	out_buffer[0] = cmd;
	out_buffer[1] = 0;
	uint8_t in_buffer[2];

	csn_low(radio);
	HAL_SPI_TransmitReceive(radio.hspiX, out_buffer, in_buffer, 2, radio.spi_rw_timeout);
	csn_high(radio);

	return in_buffer[1];
}

void nrf24_w_spec_cmd(struct NRFConfig radio, uint8_t cmd){
	HAL_SPI_Transmit(radio.hspiX, &cmd, 1, radio.spi_w_timeout);
}

void nrf24_w_spec_reg(struct NRFConfig radio, uint8_t *data, uint8_t size){
	HAL_SPI_Transmit(radio.hspiX, data, size, radio.spi_w_timeout);
}

void nrf24_r_spec_reg(struct NRFConfig radio, uint8_t *data, uint8_t size){
	HAL_SPI_Receive(radio.hspiX, data, size, radio.spi_r_timeout);
}

uint8_t nrf24_r_status(struct NRFConfig radio){
	uint8_t data = 0;
	uint8_t cmd = NOP_CMD;

	csn_low(radio);
	HAL_SPI_TransmitReceive(radio.hspiX, &cmd, &data, 1, radio.spi_rw_timeout);
	csn_high(radio);

	return data;
}

uint8_t nrf24_transmit(struct NRFConfig radio, uint8_t *data, uint8_t size){

	ce_low(radio);

	uint8_t cmd = W_TX_PAYLOAD;
	uint8_t out_buffer[size + 1];
	out_buffer[0] = cmd;
	memcpy(&out_buffer[1], data, size);

	csn_low(radio);
	HAL_SPI_Transmit(radio.hspiX, out_buffer, size + 1, radio.spi_w_timeout);
	csn_high(radio);

	ce_high(radio);
	delay_us(1000);
	ce_low(radio);

	if(nrf24_r_status(radio) & (1 << MAX_RT)){
		nrf24_clear_max_rt(radio);
		nrf24_flush_tx(radio);
		return 1;
	}

	return 0;
}

void nrf24_transmit_no_ack(struct NRFConfig radio, uint8_t *data, uint8_t size){

	ce_low(radio);

	uint8_t cmd = W_TX_PAYLOAD;
	uint8_t out_buffer[size + 1];
	out_buffer[0] = cmd;
	memcpy(&out_buffer[1], data, size);

	csn_low(radio);
	HAL_SPI_Transmit(radio.hspiX, out_buffer, size + 1, radio.spi_w_timeout);
	csn_high(radio);

	ce_high(radio);
	HAL_Delay(1);
	ce_low(radio);
}

void nrf24_transmit_rx_ack_pld(struct NRFConfig radio, uint8_t pipe, uint8_t *data, uint8_t size){

	if(pipe > 5){
		pipe = 5;
	}

	uint8_t cmd = (W_ACK_PAYLOAD | pipe);
	uint8_t out_buffer[size + 1];
	out_buffer[0] = cmd;
	memcpy(&out_buffer[1], data, size);

	csn_low(radio);
	HAL_SPI_Transmit(radio.hspiX, out_buffer, size + 1, radio.spi_w_timeout);
	csn_high(radio);
}

void nrf24_receive(struct NRFConfig radio, uint8_t *data, uint8_t size){
	uint8_t cmd = R_RX_PAYLOAD;

	csn_low(radio);
	HAL_SPI_Transmit(radio.hspiX, &cmd, 1, radio.spi_w_timeout);
	HAL_SPI_Receive(radio.hspiX, data, size, radio.spi_r_timeout);
	csn_high(radio);

	nrf24_clear_rx_dr(radio);
}

void nrf24_defaults(struct NRFConfig radio){
	ce_low(radio);

	nrf24_tx_pwr(radio, _0dbm);
	nrf24_data_rate(radio, _1mbps);
	nrf24_set_channel(radio, 76);
	nrf24_set_crc(radio, en_crc, _2byte);
	nrf24_set_addr_width(radio, 5);
	nrf24_flush_tx(radio);
	nrf24_flush_rx(radio);
	nrf24_clear_rx_dr(radio);
	nrf24_clear_tx_ds(radio);
	nrf24_clear_max_rt(radio);
	nrf24_stop_listen(radio);
	nrf24_dpl(radio, disable);
	nrf24_en_ack_pld(radio, enable);
	nrf24_en_dyn_ack(radio, disable);
	nrf24_auto_retr_delay(radio, 2); // Delay is in increments of 250us
	nrf24_auto_retr_limit(radio, 15);

	for(uint8_t i = 0; i < 6; i++){
		nrf24_pipe_pld_size(radio, i, 0);
		nrf24_cls_rx_pipe(radio, i);
		nrf24_set_rx_dpl(radio, i, disable);
		nrf24_auto_ack(radio, i, enable);
	}
}
